// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Thumbnail component renders disabled thumbnail 1`] = `
<div>
  <label
    class="squareCardContainer"
  >
    <div
      class="bp4-card bp4-elevation-0 card squareCard disabled"
    >
      <span
        class="bp4-icon StyledProps--main"
        data-icon="main-dashboard"
      >
        <svg
          height="26"
          viewBox="0 0 14 14"
          width="26"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.4 3.5c-.5 0-.9.4-.9.9s.4.9.9.9.9-.4.9-.9-.4-.9-.9-.9zm-.9 2.6c-.5 0-.9.4-.9.9s.4.9.9.9.9-.4.9-.9-.4-.9-.9-.9zM7 4.4c.5 0 .9-.4.9-.9s-.4-.9-.9-.9-.9.4-.9.9.4.9.9.9zM5.2 9.6c0 1 .8 1.8 1.8 1.8s1.8-.8 1.8-1.8C8.8 9.2 7 5.2 7 5.2s-1.8 4-1.8 4.4zM7 0C3.1 0 0 3.1 0 7s3.1 7 7 7 7-3.1 7-7-3.1-7-7-7zm0 12.2c-2.9 0-5.2-2.4-5.2-5.2S4.1 1.8 7 1.8s5.2 2.4 5.2 5.2-2.3 5.2-5.2 5.2zm3.5-7.8c0-.5-.4-.9-.9-.9s-.8.4-.8.9.4.9.9.9.8-.4.8-.9zm0 1.7c-.5 0-.9.4-.9.9s.4.9.9.9.9-.4.9-.9-.4-.9-.9-.9z"
            fill="#4d5969"
          />
        </svg>
      </span>
    </div>
    <p
      class="StyledProps--font StyledProps--main label StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey500 StyledProps--margin-top-small"
    >
      Dashboard
    </p>
    <input
      disabled=""
      type="checkbox"
      value="dashboard"
    />
  </label>
</div>
`;

exports[`Thumbnail component renders large size thumbnail 1`] = `
<div>
  <label
    class="squareCardContainer large"
  >
    <div
      class="bp4-card bp4-interactive bp4-elevation-0 card squareCard interactive"
      tabindex="0"
    >
      <span
        class="bp4-icon StyledProps--main"
        data-icon="main-dashboard"
      >
        <svg
          height="26"
          viewBox="0 0 14 14"
          width="26"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.4 3.5c-.5 0-.9.4-.9.9s.4.9.9.9.9-.4.9-.9-.4-.9-.9-.9zm-.9 2.6c-.5 0-.9.4-.9.9s.4.9.9.9.9-.4.9-.9-.4-.9-.9-.9zM7 4.4c.5 0 .9-.4.9-.9s-.4-.9-.9-.9-.9.4-.9.9.4.9.9.9zM5.2 9.6c0 1 .8 1.8 1.8 1.8s1.8-.8 1.8-1.8C8.8 9.2 7 5.2 7 5.2s-1.8 4-1.8 4.4zM7 0C3.1 0 0 3.1 0 7s3.1 7 7 7 7-3.1 7-7-3.1-7-7-7zm0 12.2c-2.9 0-5.2-2.4-5.2-5.2S4.1 1.8 7 1.8s5.2 2.4 5.2 5.2-2.3 5.2-5.2 5.2zm3.5-7.8c0-.5-.4-.9-.9-.9s-.8.4-.8.9.4.9.9.9.8-.4.8-.9zm0 1.7c-.5 0-.9.4-.9.9s.4.9.9.9.9-.4.9-.9-.4-.9-.9-.9z"
            fill="#4d5969"
          />
        </svg>
      </span>
    </div>
    <p
      class="StyledProps--font StyledProps--main label StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey600 StyledProps--margin-top-small"
    >
      Dashboard
    </p>
    <input
      type="checkbox"
      value="dashboard"
    />
  </label>
</div>
`;

exports[`Thumbnail component renders selected thumbnail 1`] = `
<div>
  <label
    class="squareCardContainer"
  >
    <div
      class="bp4-card bp4-elevation-0 card squareCard selected"
    >
      <span
        class="corner"
      >
        <span
          class="badge"
        />
        <span
          class="bp4-icon StyledProps--main StyledProps--color StyledProps--color-white"
          data-icon="main-tick"
        >
          <svg
            height="10"
            viewBox="0 0 11 8"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.219.894c.356-.38.982-.413 1.398-.072.391.32.457.857.167 1.236l-.06.07-5.138 5.486c-.362.386-.993.41-1.403.068l-.07-.064-3.2-3.214A.88.88 0 01.95 3.098a1.045 1.045 0 011.328-.003l.074.067 2.443 2.454L9.22.894z"
              fill="currentColor"
            />
          </svg>
        </span>
      </span>
      <span
        class="bp4-icon StyledProps--main"
        data-icon="main-dashboard"
      >
        <svg
          height="26"
          viewBox="0 0 14 14"
          width="26"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.4 3.5c-.5 0-.9.4-.9.9s.4.9.9.9.9-.4.9-.9-.4-.9-.9-.9zm-.9 2.6c-.5 0-.9.4-.9.9s.4.9.9.9.9-.4.9-.9-.4-.9-.9-.9zM7 4.4c.5 0 .9-.4.9-.9s-.4-.9-.9-.9-.9.4-.9.9.4.9.9.9zM5.2 9.6c0 1 .8 1.8 1.8 1.8s1.8-.8 1.8-1.8C8.8 9.2 7 5.2 7 5.2s-1.8 4-1.8 4.4zM7 0C3.1 0 0 3.1 0 7s3.1 7 7 7 7-3.1 7-7-3.1-7-7-7zm0 12.2c-2.9 0-5.2-2.4-5.2-5.2S4.1 1.8 7 1.8s5.2 2.4 5.2 5.2-2.3 5.2-5.2 5.2zm3.5-7.8c0-.5-.4-.9-.9-.9s-.8.4-.8.9.4.9.9.9.8-.4.8-.9zm0 1.7c-.5 0-.9.4-.9.9s.4.9.9.9.9-.4.9-.9-.4-.9-.9-.9z"
            fill="#4d5969"
          />
        </svg>
      </span>
    </div>
    <p
      class="StyledProps--font StyledProps--main label StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey600 StyledProps--margin-top-small"
    >
      Dashboard
    </p>
    <input
      checked=""
      type="checkbox"
      value="dashboard"
    />
  </label>
</div>
`;

exports[`Thumbnail component renders thumbnail with React element as label 1`] = `
<div>
  <label
    class="squareCardContainer bigger"
  >
    <div
      class="bp4-card bp4-interactive bp4-elevation-0 card squareCard interactive"
      tabindex="0"
    >
      <div
        data-testid="custom-label"
      >
        Custom Label
      </div>
    </div>
    <input
      type="checkbox"
      value="custom"
    />
  </label>
</div>
`;

exports[`Thumbnail component renders thumbnail with icon and label 1`] = `
<div>
  <label
    class="squareCardContainer"
  >
    <div
      class="bp4-card bp4-interactive bp4-elevation-0 card squareCard interactive"
      tabindex="0"
    >
      <span
        class="bp4-icon StyledProps--main"
        data-icon="main-dashboard"
      >
        <svg
          height="26"
          viewBox="0 0 14 14"
          width="26"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.4 3.5c-.5 0-.9.4-.9.9s.4.9.9.9.9-.4.9-.9-.4-.9-.9-.9zm-.9 2.6c-.5 0-.9.4-.9.9s.4.9.9.9.9-.4.9-.9-.4-.9-.9-.9zM7 4.4c.5 0 .9-.4.9-.9s-.4-.9-.9-.9-.9.4-.9.9.4.9.9.9zM5.2 9.6c0 1 .8 1.8 1.8 1.8s1.8-.8 1.8-1.8C8.8 9.2 7 5.2 7 5.2s-1.8 4-1.8 4.4zM7 0C3.1 0 0 3.1 0 7s3.1 7 7 7 7-3.1 7-7-3.1-7-7-7zm0 12.2c-2.9 0-5.2-2.4-5.2-5.2S4.1 1.8 7 1.8s5.2 2.4 5.2 5.2-2.3 5.2-5.2 5.2zm3.5-7.8c0-.5-.4-.9-.9-.9s-.8.4-.8.9.4.9.9.9.8-.4.8-.9zm0 1.7c-.5 0-.9.4-.9.9s.4.9.9.9.9-.4.9-.9-.4-.9-.9-.9z"
            fill="#4d5969"
          />
        </svg>
      </span>
    </div>
    <p
      class="StyledProps--font StyledProps--main label StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey600 StyledProps--margin-top-small"
    >
      Dashboard
    </p>
    <input
      type="checkbox"
      value="dashboard"
    />
  </label>
</div>
`;

exports[`Thumbnail component renders thumbnail with image 1`] = `
<div>
  <label
    class="squareCardContainer"
  >
    <div
      class="bp4-card bp4-interactive bp4-elevation-0 card squareCard interactive"
      tabindex="0"
    >
      <img
        alt="Test Image"
        class="image"
        src="test.jpg"
      />
    </div>
    <p
      class="StyledProps--font StyledProps--main label StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey600 StyledProps--margin-top-small"
    >
      Test
    </p>
    <input
      type="checkbox"
      value="test"
    />
  </label>
</div>
`;

exports[`Thumbnail component renders thumbnail with label only 1`] = `
<div>
  <label
    class="squareCardContainer bigger"
  >
    <div
      class="bp4-card bp4-interactive bp4-elevation-0 card squareCard interactive"
      tabindex="0"
    >
      <p
        class="StyledProps--font StyledProps--main label StyledProps--color StyledProps--color-black"
      >
        Label Only
      </p>
    </div>
    <input
      type="checkbox"
      value="label"
    />
  </label>
</div>
`;
